syntax = "proto3";

option java_package = "com.recipe.grpc.api.auth.v1";
option java_multiple_files = true;
option java_outer_classname = "AuthServiceProto";


service AuthService {

  rpc Login(LoginRequest) returns (LoginResponse);

}

message LoginRequest {
  string username = 1;
  string password = 2;

}

message LoginResponse {
  string token = 1;
  uint64 expires_in = 2;
}